@@ -19,6 +19,7 @@
 [+] Ajout du hook plxMotorRedir301 dans la classe plxMotor
 [+] plxShow::staticList : ajout de la variable #group_status
 [+] Thème par défaut : affichage des groupes de pages statiques sous forme de menus déroulant
+[+] Plugins : si la langue par défaut n'est pas disponible on tente de charger le fr.php sinon on prend le 1er fichier de langue dispo
 [+] #69: plxAdmin:editArticle - ajout du hook plxAdminEditArticleEnd
 [+] #177: Ajout de la protection du lien téléphone (contribution cfdev)
 [+] #191: plxShow:catList - Ajout de la variable #cat_description
